bus stop scale to bus station, poi text colors

--- a/layers/pois.yaml
+++ b/layers/pois.yaml
@@ -7,8 +7,8 @@ textures:
         filtering: mipmap
         sprites:
             # define sprites: [x origin, y origin, width, height]
-            airport: [834, 0, 36, 36]
-            aerodrome: [834, 0, 36, 36]
+            airport: [830, 0, 36, 36]
+            aerodrome: [830, 0, 36, 36]
             aquarium: [618, 168, 36, 36]
             art-gallery: [530, 168, 36, 36]
             art_gallery: [530, 168, 36, 36]
@@ -17,41 +17,41 @@ textures:
             pitch: [88, 168, 36, 36]
             athletic_sports: [88, 168, 36, 36]
             recreation_ground: [88, 168, 36, 36]
-            atm: [818, 126, 36, 36]
-            automotive-shop: [906, 126, 36, 36]
-            car_repair: [906, 126, 36, 36]
-            automotive: [906, 126, 36, 36]
-            tyres: [906, 126, 36, 36]
+            atm: [816, 126, 36, 36]
+            automotive-shop: [904, 126, 36, 36]
+            car_repair: [904, 126, 36, 36]
+            automotive: [904, 126, 36, 36]
+            tyres: [904, 126, 36, 36]
             bakery: [442, 168, 36, 36]
             pastry: [442, 168, 36, 36]
             chocolate: [442, 168, 36, 36]
-            bank: [862, 126, 36, 36]
+            bank: [860, 126, 36, 36]
             bar: [134, 168, 36, 36]
             pub: [134, 168, 36, 36]
-            baseball-field: [448, 84, 36, 36]
+            baseball-field: [446, 84, 36, 36]
             basketball-court: [402, 84, 36, 36]
-            beach: [582, 84, 36, 36]
+            beach: [580, 84, 36, 36]
             beer-garden: [132, 210, 36, 36]
             biergarten: [132, 210, 36, 36]
             brewery: [132, 210, 36, 36]
-            bench: [526, 0, 36, 36]
-            bicycle-parking: [544, 126, 36, 36]
-            bike-shop: [772, 126, 36, 36]
-            bicycle: [772, 126, 36, 36]
-            bicycle_rental: [772, 126, 36, 36]
-            bike: [772, 126, 36, 36]
-            bike_shop: [772, 126, 36, 36]
-            boat-ferry: [790, 0, 36, 36]
-            ferry_terminal: [790, 0, 36, 36]
-            ferry-boat: [790, 0, 36, 36]
-            ferry: [790, 0, 36, 36]
+            bench: [522, 0, 36, 36]
+            bicycle-parking: [542, 126, 36, 36]
+            bike-shop: [770, 126, 36, 36]
+            bicycle: [770, 126, 36, 36]
+            bicycle_rental: [770, 126, 36, 36]
+            bike: [770, 126, 36, 36]
+            bike_shop: [770, 126, 36, 36]
+            boat-ferry: [786, 0, 36, 36]
+            ferry_terminal: [786, 0, 36, 36]
+            ferry-boat: [786, 0, 36, 36]
+            ferry: [786, 0, 36, 36]
             boat-ramp: [90, 84, 36, 36]
             slipway: [90, 84, 36, 36]
             boat_ramp: [90, 84, 36, 36]
-            bookstore: [726, 126, 36, 36]
-            books: [726, 126, 36, 36]
-            bridge: [846, 84, 36, 36]
-            buddhism: [714, 84, 36, 36]
+            bookstore: [724, 126, 36, 36]
+            books: [724, 126, 36, 36]
+            bridge: [844, 84, 36, 36]
+            buddhism: [712, 84, 36, 36]
             building: [310, 168, 36, 36]
             auditorium: [310, 168, 36, 36]
             terminal: [310, 168, 36, 36]
@@ -62,13 +62,13 @@ textures:
             apartments: [310, 168, 36, 36]
             burger: [0, 210, 36, 36]
             fast_food: [0, 210, 36, 36]
-            bus-station: [746, 0, 36, 36]
-            bus_stop: [746, 0, 36, 36]
-            bus_station: [746, 0, 36, 36]
+            bus-station: [742, 0, 36, 36]
+            bus_stop: [742, 0, 36, 36]
+            bus_station: [742, 0, 36, 36]
             butcher: [852, 42, 36, 36]
-            campground: [758, 84, 36, 36]
-            camp_site: [758, 84, 36, 36]
-            caravan_site: [758, 84, 36, 36]
+            campground: [756, 84, 36, 36]
+            camp_site: [756, 84, 36, 36]
+            caravan_site: [756, 84, 36, 36]
             candy-store: [884, 168, 36, 36]
             candy: [884, 168, 36, 36]
             confectionery: [884, 168, 36, 36]
@@ -77,12 +77,12 @@ textures:
             capital-s: [326, 212, 10, 10]
             capital-xl: [418, 212, 20, 20]
             capital-xs: [312, 212, 8, 8]
-            car-dealership: [682, 126, 36, 36]
-            car: [682, 126, 36, 36]
+            car-dealership: [680, 126, 36, 36]
+            car: [680, 126, 36, 36]
             castle: [354, 42, 36, 36]
             fort: [354, 42, 36, 36]
-            cemetery: [670, 84, 36, 36]
-            grave_yard: [670, 84, 36, 36]
+            cemetery: [668, 84, 36, 36]
+            grave_yard: [668, 84, 36, 36]
             church: [136, 126, 36, 36]
             clothing-store: [706, 168, 36, 36]
             clothes: [706, 168, 36, 36]
@@ -97,15 +97,15 @@ textures:
             convenience: [0, 84, 36, 36]
             convenience_store: [0, 84, 36, 36]
             beverages: [0, 84, 36, 36]
-            courthouse: [350, 0, 36, 36]
-            department-store: [636, 126, 36, 36]
-            department_store: [636, 126, 36, 36]
+            courthouse: [348, 0, 36, 36]
+            department-store: [634, 126, 36, 36]
+            department_store: [634, 126, 36, 36]
             drinking-water: [88, 210, 36, 36]
             dry-cleaning: [942, 42, 36, 36]
             dry_cleaning: [942, 42, 36, 36]
-            electronics-store: [498, 126, 36, 36]
-            electronics: [498, 126, 36, 36]
-            computer: [498, 126, 36, 36]
+            electronics-store: [496, 126, 36, 36]
+            electronics: [496, 126, 36, 36]
+            computer: [496, 126, 36, 36]
             factory: [266, 168, 36, 36]
             industrial: [266, 168, 36, 36]
             chimney: [266, 168, 36, 36]
@@ -116,8 +116,8 @@ textures:
             water_works: [266, 168, 36, 36]
             plant: [266, 168, 36, 36]
             generator: [266, 168, 36, 36]
-            fire-station: [306, 0, 36, 36]
-            fire_station: [306, 0, 36, 36]
+            fire-station: [304, 0, 36, 36]
+            fire_station: [304, 0, 36, 36]
             fitness: [806, 42, 36, 36]
             gym: [806, 42, 36, 36]
             fitness_center: [806, 42, 36, 36]
@@ -127,7 +127,7 @@ textures:
             conservation: [930, 168, 36, 36]
             nature_reserve: [930, 168, 36, 36]
             fountain: [224, 126, 36, 36]
-            garden: [626, 84, 36, 36]
+            garden: [624, 84, 36, 36]
             gas-station: [840, 168, 36, 36]
             fuel: [840, 168, 36, 36]
             generic: [266, 210, 36, 36]
@@ -140,10 +140,10 @@ textures:
             townhall: [44, 168, 36, 36]
             public_building: [44, 168, 36, 36]
             embassy: [44, 168, 36, 36]
-            grocery-store: [452, 126, 36, 36]
-            supermarket: [452, 126, 36, 36]
-            health_food: [452, 126, 36, 36]
-            greengrocer: [452, 126, 36, 36]
+            grocery-store: [450, 126, 36, 36]
+            supermarket: [450, 126, 36, 36]
+            health_food: [450, 126, 36, 36]
+            greengrocer: [450, 126, 36, 36]
             harbor-marina: [0, 168, 36, 36]
             marina: [0, 168, 36, 36]
             harbor: [0, 168, 36, 36]
@@ -155,10 +155,10 @@ textures:
             doityourself: [760, 42, 36, 36]
             paint: [760, 42, 36, 36]
             historic-site: [0, 126, 36, 36]
-            hospital: [176, 0, 36, 36]
-            hotel: [702, 0, 36, 36]
-            motel: [702, 0, 36, 36]
-            hostel: [702, 0, 36, 36]
+            hospital: [174, 0, 36, 36]
+            hotel: [698, 0, 36, 36]
+            motel: [698, 0, 36, 36]
+            hostel: [698, 0, 36, 36]
             ice-cream-shop: [176, 210, 36, 36]
             ice_cream: [176, 210, 36, 36]
             information: [220, 210, 36, 36]
@@ -166,22 +166,22 @@ textures:
             jewelry-store: [670, 42, 36, 36]
             jewelry: [670, 42, 36, 36]
             jewelry_store: [670, 42, 36, 36]
-            landmark: [264, 0, 36, 36]
-            memorial: [264, 0, 36, 36]
-            monument: [264, 0, 36, 36]
-            wayside_shrine: [264, 0, 36, 36]
-            tower: [264, 0, 36, 36]
-            beacon: [264, 0, 36, 36]
+            landmark: [262, 0, 36, 36]
+            memorial: [262, 0, 36, 36]
+            monument: [262, 0, 36, 36]
+            wayside_shrine: [262, 0, 36, 36]
+            tower: [262, 0, 36, 36]
+            beacon: [262, 0, 36, 36]
             laundry: [626, 42, 36, 36]
             dry_cleaning: [626, 42, 36, 36]
             library: [0, 0, 36, 36]
-            light-rail: [658, 0, 36, 36]
-            light_rail: [658, 0, 36, 36]
-            tram_stop: [658, 0, 36, 36]
+            light-rail: [654, 0, 36, 36]
+            light_rail: [654, 0, 36, 36]
+            tram_stop: [654, 0, 36, 36]
             lighthouse: [222, 84, 36, 36]
-            liquor-store: [406, 126, 36, 36]
-            alcohol: [406, 126, 36, 36]
-            liquor: [406, 126, 36, 36]
+            liquor-store: [404, 126, 36, 36]
+            alcohol: [404, 126, 36, 36]
+            liquor: [404, 126, 36, 36]
             mall: [580, 42, 36, 36]
             market: [534, 42, 36, 36]
             variety_store: [534, 42, 36, 36]
@@ -200,22 +200,22 @@ textures:
             movie-theatre: [662, 168, 36, 36]
             cinema: [662, 168, 36, 36]
             movie-theater: [662, 168, 36, 36]
-            museum: [978, 84, 36, 36]
-            observatory: [978, 84, 36, 36]
+            museum: [976, 84, 36, 36]
+            observatory: [976, 84, 36, 36]
             music-store: [308, 42, 36, 36]
             music: [308, 42, 36, 36]
             musical_instrument: [308, 42, 36, 36]
             newsstand: [262, 42, 36, 36]
             kiosk: [262, 42, 36, 36]
             newsagent: [262, 42, 36, 36]
-            office: [538, 84, 36, 36]
-            insurance: [538, 84, 36, 36]
-            company: [538, 84, 36, 36]
+            office: [536, 84, 36, 36]
+            insurance: [536, 84, 36, 36]
+            company: [536, 84, 36, 36]
             optical-shop: [220, 42, 36, 36]
             optician: [220, 42, 36, 36]
             optical_shop: [220, 42, 36, 36]
             park: [180, 126, 36, 36]
-            parking: [590, 126, 36, 36]
+            parking: [588, 126, 36, 36]
             performing-arts: [486, 168, 36, 36]
             theater: [486, 168, 36, 36]
             theatre: [486, 168, 36, 36]
@@ -229,9 +229,9 @@ textures:
             photo_studio: [132, 42, 36, 36]
             photography_lab: [132, 42, 36, 36]
             photographer: [132, 42, 36, 36]
-            pier: [614, 0, 36, 36]
+            pier: [610, 0, 36, 36]
             playground: [398, 42, 36, 36]
-            police: [220, 0, 36, 36]
+            police: [218, 0, 36, 36]
             pool: [134, 84, 36, 36]
             swimming_pool: [134, 84, 36, 36]
             water_park: [134, 84, 36, 36]
@@ -242,20 +242,20 @@ textures:
             real_estate: [88, 42, 36, 36]
             recycling-facility: [44, 42, 36, 36]
             recycling: [44, 42, 36, 36]
-            rental-car: [570, 0, 36, 36]
-            car_rental: [570, 0, 36, 36]
-            car_sharing: [570, 0, 36, 36]
+            rental-car: [566, 0, 36, 36]
+            car_rental: [566, 0, 36, 36]
+            car_sharing: [566, 0, 36, 36]
             restaurant: [974, 168, 36, 36]
             deli: [974, 168, 36, 36]
-            ruin: [482, 0, 36, 36]
-            ruins: [482, 0, 36, 36]
-            archaeological_site: [482, 0, 36, 36]
+            ruin: [478, 0, 36, 36]
+            ruins: [478, 0, 36, 36]
+            archaeological_site: [478, 0, 36, 36]
             salon-barber: [0, 42, 36, 36]
             hairdresser: [0, 42, 36, 36]
             salon: [0, 42, 36, 36]
             beauty_salon: [0, 42, 36, 36]
-            school: [494, 84, 36, 36]
-            kindergarten: [494, 84, 36, 36]
+            school: [492, 84, 36, 36]
+            kindergarten: [492, 84, 36, 36]
             shoe-store: [488, 42, 36, 36]
             shoes: [488, 42, 36, 36]
             shoe_store: [488, 42, 36, 36]
@@ -265,21 +265,21 @@ textures:
             spiritual_center: [178, 168, 36, 36]
             place_of_worship: [178, 168, 36, 36]
             wayside_chapel: [178, 168, 36, 36]
-            sporting-goods-shop: [968, 0, 36, 36]
-            sporting_goods: [968, 0, 36, 36]
-            sports: [968, 0, 36, 36]
-            outdoor: [968, 0, 36, 36]
+            sporting-goods-shop: [964, 0, 36, 36]
+            sporting_goods: [964, 0, 36, 36]
+            sports: [964, 0, 36, 36]
+            outdoor: [964, 0, 36, 36]
             spring: [266, 84, 36, 36]
-            stadium: [360, 126, 36, 36]
-            subway-entrance: [438, 0, 36, 36]
+            stadium: [358, 126, 36, 36]
+            subway-entrance: [436, 0, 36, 36]
             synagogue: [44, 0, 36, 36]
-            tailor-shop: [922, 0, 36, 36]
-            tailor: [922, 0, 36, 36]
+            tailor-shop: [918, 0, 36, 36]
+            tailor: [918, 0, 36, 36]
             tennis: [314, 126, 36, 36]
-            theme-park: [934, 84, 36, 36]
-            theme_park: [934, 84, 36, 36]
-            miniature_golf: [934, 84, 36, 36]
-            toilets: [802, 84, 36, 36]
+            theme-park: [932, 84, 36, 36]
+            theme_park: [932, 84, 36, 36]
+            miniature_golf: [932, 84, 36, 36]
+            toilets: [800, 84, 36, 36]
             townspot-l: [610, 210, 18, 18]
             townspot-l-rev: [498, 212, 16, 16]
             townspot-m: [588, 210, 14, 14]
@@ -290,14 +290,14 @@ textures:
             townspot-xl-rev: [522, 212, 20, 20]
             townspot-xs: [550, 210, 10, 10]
             townspot-xs-rev: [446, 212, 6, 6]
-            toy-game-store: [876, 0, 36, 36]
-            toys: [876, 0, 36, 36]
-            baby_goods: [876, 0, 36, 36]
+            toy-game-store: [872, 0, 36, 36]
+            toys: [872, 0, 36, 36]
+            baby_goods: [872, 0, 36, 36]
             traffic-signal: [796, 168, 36, 36]
             traffic_signals: [796, 168, 36, 36]
-            train-station: [394, 0, 36, 36]
-            station: [394, 0, 36, 36]
-            train-staion: [394, 0, 36, 36]
+            train-station: [392, 0, 36, 36]
+            station: [392, 0, 36, 36]
+            train-staion: [392, 0, 36, 36]
             ux-current-location: [0, 342, 88, 88]
             current-location: [0, 342, 88, 88]
             ux-locate-off: [334, 342, 72, 72]
@@ -322,12 +322,12 @@ textures:
             viewpoint: [574, 168, 36, 36]
             view_point: [574, 168, 36, 36]
             vista: [574, 168, 36, 36]
-            vineyard: [950, 126, 36, 36]
+            vineyard: [948, 126, 36, 36]
             volcano: [46, 84, 36, 36]
             wine-bar: [44, 210, 36, 36]
             winery: [354, 168, 36, 36]
             wine: [354, 168, 36, 36]
-            zoo: [890, 84, 36, 36]
+            zoo: [888, 84, 36, 36]
 
 layers:
 
@@ -734,7 +734,7 @@ layers:
                     filter: { kind: hospital }
                     draw: { icons: { text: { font: { fill: [0.932,0.737,0.932] } } } }
                 courthouse:
-                    filter: { kind: [courthouse,library,museum,post_office,police,embassy,bank,observatory,recycling,information,bicycle_rental_station,fire_station,townhall,assisted_living,group_home,community_centre,attraction,artwork,sports_centre,historical,fitness_station,drinking_water,ngo,plumber,lawyer,it,doctors,guest_house,clinic,shelter] }
+                    filter: { kind: [courthouse,library,museum,post_office,police,embassy,bank,observatory,recycling,information,bicycle_rental_station,fire_station,townhall,assisted_living,group_home,community_centre,attraction,artwork,sports_centre,historical,fitness_station,drinking_water,ngo,plumber,lawyer,it,doctors,guest_house,clinic,shelter,social_facility] }
                     draw: { icons: { text: { font: { fill: [0.149,0.871,0.992] } } } }
                 school:
                     filter: { kind: [school,university,kindergarten,college] }
@@ -747,7 +747,7 @@ layers:
                     filter: { kind: [place_of_worship,cemetery] }
                     draw: { icons: { text: { font: { fill: [0.719,0.806,0.839] } } } }
                 ferry:
-                    filter: { kind: [ferry_terminal,tram_stop,subway_entrance] }
+                    filter: { kind: [ferry_terminal,tram_stop,subway_entrance,bus_station] }
                     draw: { icons: { text: { font: { fill: [0.965,0.929,0.341] } } } }
                 theatre:
                     filter: { kind: [theatre,performing-arts,cinema] }
@@ -771,7 +771,7 @@ layers:
                     filter: { kind: [veterinary,pet,pet_store] }
                     draw: { icons: { text: { font: { fill: [0.838,0.815,0.970] } } } }
                 hairdresser:
-                    filter: { kind: [hairdresser] }
+                    filter: { kind: [hairdresser,laundry] }
                     draw: { icons: { text: { font: { fill: [0.988,0.851,0.820] } } } }
                 airport:
                     filter: { kind: [aerodrome] }
@@ -1156,7 +1156,7 @@ layers:
                         $zoom: { max: 19 }
                     draw:
                         icons:
-                            size: [[13, 8px], [18, 18px], [19,22px]]
+                            size: [[13, 8px], [18, 15px], [19,18px]]
                             text:
                                 visible: false
             college-university:
