--- a/layers/water.yaml
+++ b/layers/water.yaml
@@ -167,7 +167,8 @@ styles:
                 SHIMMERING_SCALE: mix(35.,10.,zoom())
                 SHIMMERING_COLOR: color.rgb
                 # SHIMMERING_BACKGROUND_COLOR: vec3(0.128,0.257,0.446)
-                SHIMMERING_BACKGROUND_COLOR: vec3(0.092,0.101,0.145)
+                # SHIMMERING_BACKGROUND_COLOR: vec3(0.092,0.101,0.145)
+                SHIMMERING_BACKGROUND_COLOR: vec3(0.03,0.05,0.07)
                 SHIMMERING_SPEED: .5
                 SHIMMERING_AMOUNT: zoom()
                 SHIMMERING_ANIMATED: global.animated
